Fix URL being passed as argument when launching a .desktop file

Summary:
When a .desktop file is executed directly, it doesn't receive a parameter.
BUG: 421364

Test Plan: Test passes, applications open normally again.

Reviewers: dfaure, marten

Reviewed By: dfaure

Subscribers: kde-frameworks-devel

Tags: #frameworks

Differential Revision: https://phabricator.kde.org/D29800